@@ -310,6 +310,32 @@ declare x as type integer
 cdecl> explain typedef unsigned long size_t
 declare size_t as type unsigned long integer
 cdecl> 
+cdecl> explain int _Accum
+               ^
+152,9: warning: "_Accum" is a keyword in C99 (with Embedded C extensions)
+declare _Accum as integer
+cdecl> explain int _Fract
+               ^
+153,9: warning: "_Fract" is a keyword in C99 (with Embedded C extensions)
+declare _Fract as integer
+cdecl> explain int _Sat
+               ^
+154,9: warning: "_Sat" is a keyword in C99 (with Embedded C extensions)
+declare _Sat as integer
+cdecl> 
+cdecl> explain int relaxed
+               ^
+156,9: warning: "relaxed" is a keyword in C99 (with Unified Parallel C extensions)
+declare relaxed as integer
+cdecl> explain int shared
+               ^
+157,9: warning: "shared" is a keyword in C99 (with Unified Parallel C extensions)
+declare shared as integer
+cdecl> explain int strict
+               ^
+158,9: warning: "strict" is a keyword in C99 (with Unified Parallel C extensions)
+declare strict as integer
+cdecl> 
 cdecl> explain typeof(int) x
 declare x as integer
 cdecl> explain typeof(int) *x, y
@@ -482,7 +508,7 @@ cdecl>
 cdecl> set c18
 cdecl> explain int* f(x)
                       ^
-243,16: warning: missing type specifier; "int" assumed
+251,16: warning: missing type specifier; "int" assumed
 declare f as function (x) returning pointer to integer
 cdecl> 
 cdecl> set c++
@@ -539,13 +565,13 @@ c++decl> explain [[no_unique_address]] struct S x
 declare x as non-unique-address structure S
 c++decl> explain [[nodiscard]] void f()
                  ^
-273,9: warning: "nodiscard" functions must return a value
+281,9: warning: "nodiscard" functions must return a value
 declare f as non-discardable function returning void
 c++decl> explain [[noreturn]] void f(int)
 declare f as non-returning function (integer) returning void
 c++decl> explain [[using foo : maybe_unused]] int i
                    ^
-275,11: warning: "using" in attributes not supported by cdecl (ignoring)
+283,11: warning: "using" in attributes not supported by cdecl (ignoring)
 declare i as maybe unused integer
 c++decl> explain alignas(0) char c
 declare c as character
@@ -567,7 +593,7 @@ c++decl> explain auto const [x, y]
 declare x, y as constant structured binding
 c++decl> explain volatile auto [x, y]
                  ^
-285,9: warning: "volatile" structured bindings are deprecated since C++20
+293,9: warning: "volatile" structured bindings are deprecated since C++20
 declare x, y as volatile structured binding
 c++decl> explain static auto [x, y]
 declare x, y as static structured binding
@@ -785,15 +811,15 @@ c++decl> explain void f(auto)
 declare f as function (automatic) returning void
 c++decl> explain void f(volatile int x)
                         ^
-393,16: warning: "volatile" parameter types are deprecated since C++20
+401,16: warning: "volatile" parameter types are deprecated since C++20
 declare f as function (x as volatile integer) returning void
 c++decl> explain volatile int f()
                  ^
-394,9: warning: "volatile" return types are deprecated since C++20
+402,9: warning: "volatile" return types are deprecated since C++20
 declare f as function returning volatile integer
 c++decl> explain vint f()
                  ^
-395,9: warning: "volatile" return types are deprecated since C++20
+403,9: warning: "volatile" return types are deprecated since C++20
 declare f as function returning vint
 c++decl> explain ~C()
 declare C as destructor
@@ -840,9 +866,9 @@ c++decl>
 c++decl> set c++11
 c++decl> explain register int x
                  ^
-421,9: warning: "register" is deprecated since C++11
+429,9: warning: "register" is deprecated since C++11
 declare x as register integer
 c++decl> explain ~C() throw()
                ^
-422,7: warning: "throw" is deprecated since C++11; did you mean "noexcept"?
+430,7: warning: "throw" is deprecated since C++11; did you mean "noexcept"?
 declare C as non-throwing destructor
